Fix height bug on mobile

--- a/src/components/PokemonImage.css
+++ b/src/components/PokemonImage.css
@@ -33,6 +33,8 @@
     position: absolute;
     z-index: 0 !important;
     opacity: 25%;
+    top: 0;
+    left: 0;
 }
 
 .xl-overlay {
